# REALEVOP

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements.txt
config/: pipeline.yaml
dags/: ev_charging_elt_dag.py
dashboard/: app.py
scripts/: create_demo_data.cmd  export_real_data.cmd  run_pipeline.cmd  run_streamlit.cmd  run_streamlit_logged.cmd  run_tests.cmd  start_dashboard_background.cmd
sql/: 01_schema.sql  02_analytics_queries.sql  03_dashboard_views.sql
src/ev_charging_analytics/: __init__.py  config.py  demo_data.py  extract.py  load.py  local_exports.py  pipeline.py  quality.py  sql_utils.py  transform.py
tests/: test_transform.py
