[project]
name = "ev-charging-energy-analytics"
version = "0.1.0"
description = "EV charging energy consumption analytics and optimization dashboard using ACN-Data, PostgreSQL, SQL, Python, and Streamlit."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.1",
    "pyarrow>=15.0.0",
    "plotly>=5.20.0",
    "streamlit>=1.35.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]
airflow = ["apache-airflow>=2.8.0"]

[project.scripts]
ev-charging-pipeline = "ev_charging_analytics.pipeline:main"

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

